# codecartographer

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
extension/: README.md  background.js  manifest.json  options.html  options.js  sidepanel.html  sidepanel.js
migrations/: env.py
migrations/versions/: a1d2208bc2ab_add_chunks_table_for_phase_2_embeddings.py  c9e5b34df732_initial_schema.py
specs/: README.md  phase-1-indexing-foundation.md  phase-2-embeddings.md  phase-3-agentic-qa.md  phase-4-chrome-extension.md
src/codecartographer/: agent.py  api.py  cli.py  config.py  embedder.py  indexer.py  logging.py  metrics.py  queries.py  resolution.py  walker.py
src/codecartographer/db/: models.py  session.py
src/codecartographer/parsers/: base.py  python_parser.py  typescript_parser.py
src/codecartographer/static/: index.html
tests/: conftest.py  test_agent.py  test_embedder.py  test_integration_index.py  test_integration_search.py  test_python_parser.py  test_typescript_parser.py
tests/fixtures/python/: sibling.py  tricky.py
tests/fixtures/typescript/: helper.ts  tricky.ts
