[project]
name = "codecartographer"
version = "0.1.0"
description = "Code intelligence system: symbol/call graph + AST-aware semantic chunks over large repos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[mypy]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-python>=0.23,<0.24",
    "tree-sitter-typescript>=0.23,<0.24",
    "structlog>=24.1",
    "pathspec>=0.12",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
]

[project.scripts]
codecart = "codecartographer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codecartographer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["migrations/versions", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/codecartographer/cli.py" = ["B008"]  # typer.Argument()/typer.Option() as defaults is the intended API

[tool.mypy]
# 3.13 to match the actual dev/runtime interpreter -- numpy's bundled stubs (pulled in
# transitively via sentence-transformers/pgvector) use 3.12+ stub syntax that mypy can't
# parse under an older target. requires-python above stays >=3.11 as the real floor.
python_version = "3.13"
packages = ["codecartographer"]
mypy_path = "src"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
